--- a/Narcolepsy.Core/Narcolepsy.Core.csproj
+++ b/Narcolepsy.Core/Narcolepsy.Core.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
@@ -12,16 +12,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.6" />
+    <PackageReference Include="CommunityToolkit.Maui" Version="4.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Narcolepsy.Platform\Narcolepsy.Platform.csproj" />
+    <ProjectReference Include="..\Narcolepsy.UiKit\Narcolepsy.UiKit.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Http\View\" />
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\script\" />
   </ItemGroup>
-
 </Project>
