--- a/Narcolepsy.App/Narcolepsy.App.csproj
+++ b/Narcolepsy.App/Narcolepsy.App.csproj
@@ -56,6 +56,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Narcolepsy.Core\Narcolepsy.Core.csproj" />
       <ProjectReference Include="..\Narcolepsy.Platform\Narcolepsy.Platform.csproj" />
+      <ProjectReference Include="..\Narcolepsy.Thrift\Narcolepsy.Thrift.csproj" />
       <ProjectReference Include="..\Narcolepsy.UiKit\Narcolepsy.UiKit.csproj" />
     </ItemGroup>
 
