--- a/Narcolepsy.App/Narcolepsy.App.csproj
+++ b/Narcolepsy.App/Narcolepsy.App.csproj
@@ -50,6 +50,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
       <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
     </ItemGroup>
 
