coinbase/ui changes

--- a/Narcolepsy.UiKit/Narcolepsy.UiKit.csproj
+++ b/Narcolepsy.UiKit/Narcolepsy.UiKit.csproj
@@ -36,4 +36,8 @@
     <UpToDateCheckInput Remove="layout\ContextMenu.razor.scss" />
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Form\EditableText - Copy.razor.scss" />
+  </ItemGroup>
+
 </Project>
