--- a/Narcolepsy.App/Narcolepsy.App.csproj
+++ b/Narcolepsy.App/Narcolepsy.App.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
     <PropertyGroup>
-        <TargetFrameworks>net7.0-maccatalyst</TargetFrameworks>
-        <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net7.0-windows10.0.19041.0</TargetFrameworks>
+        <TargetFrameworks>net8.0-maccatalyst</TargetFrameworks>
+        <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.19041.0</TargetFrameworks>
         <!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
         <!-- <TargetFrameworks>$(TargetFrameworks);net6.0-tizen</TargetFrameworks> -->
         <OutputType>Exe</OutputType>
@@ -45,6 +45,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Narcolepsy.CoinbaseCDP\Narcolepsy.CoinbaseCDP.csproj" />
       <ProjectReference Include="..\Narcolepsy.Core\Narcolepsy.Core.csproj" />
       <ProjectReference Include="..\Narcolepsy.GraphQL\Narcolepsy.GraphQL.csproj" />
       <ProjectReference Include="..\Narcolepsy.Platform\Narcolepsy.Platform.csproj" />
